fix failing tests